# skeleton

./: .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  requirements.txt  usage.rst  welcome.rst
docs/source/01-Tutorial/: overview.rst
docs/source/02-API/: api_skeleton.rst
docs/source/API/apidoc/: modules.rst  skeleton.rst  skeleton.sub1.rst  skeleton.sub2.rst
docs/source/TUTORIAL/: 00-overview.rst
docs/source/api/skeleton/: skeleton.rst
scripts/tests/: temp.py
src/skeleton/: __init__.py  _version.py  example.py
src/skeleton/sub1/: __init__.py  modA.py  modB.py
src/skeleton/sub2/: __init__.py  modC.py  modD.py
