[metadata]
name = skeleton-JCSCHINDLER01
version = 0.0.0
author = Joseph Schindler
author_email = jcschindler01@gmail.com
description = My skeleton package for testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcschindler01/skeleton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/skeleton/_version.py
versionfile_build = skeleton/_version.py
tag_prefix =
parentdir_prefix = skeleton-
